# SH2282000.github.io

./: .gitattributes  CNAME  README.md  de.html  fr.html  index.html  index.php  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  update_i18n.py
.github/workflows/: ci.yml
assets/: index-B_nWnkwW.js  index-CBsS00pP.js  index-DbcOt7y6.css  index-DgHDrUpN.js  index.0b797183.css  index.11ec6eda.js  index.36cd61d8.css  index.684df2b3.js  index.8849a0ab.css  index.9851ab55.js  index.988a046d.js  index.d6948d73.js  index.html
blog/: first-post.md  index.md
content/: subpage.php
disney/: index.html
disney/assets/: index-24109f7b.js  index-5fa5e474.css
docs/: .authors.yml  index.md  tags.md
docs/posts/: first.md  second.md  third.md
docs/posts/life/: life.md
hooks/: socialmedia.py
i18n/: de.json  en.json  fr.json
includes/: config.php  functions.php
overrides/partials/: comments.html
src/: App.css  App.tsx  education.tsx  i18n.ts  index.css  resume.tsx
template/: footer.html  head.php  header.html  main.css
