[project]
name = "sh2282000-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "babel~=2.10",
    "colorama~=0.4",
    "jinja2~=3.0",
    "markdown~=3.2",
    "mkdocs~=1.6",
    "mkdocs-get-deps~=0.2.0",
    "mkdocs-git-committers-plugin-2~=2.4.1",
    "mkdocs-git-revision-date-localized-plugin~=1.3.0",
    "mkdocs-glightbox~=0.4.0",
    "mkdocs-material~=9.5.46",
    "mkdocs-material-extensions~=1.3",
    "mkdocs-minify-plugin~=0.8.0",
    "mkdocs-rss-plugin~=1.16.0",
    "paginate~=0.5",
    "pygments~=2.16",
    "pymdown-extensions~=10.2",
    "regex>=2022.4",
    "requests~=2.26",
]
